Fixed menusections nav spacing, reduced logo size to stop companyname being pushed down.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -355,7 +355,7 @@ body.edit { /* border for logo on editor */
             display: inline-block;
             list-style: none;
             margin-bottom: 0;
-            padding-left: 0;
+            padding: 0.5em 0;
             @media @tablet {
                 /* Hidden until nav icon is clicked */
                 display: none;
